...
            title="Navigation Test"
            onPress={() => {
              setShowNavigationTest(true)
            }}
          />
          <Button
            testID="live-updates-test-button"
            title="Live Updates Test"
            onPress={() => {
              setShowLiveUpdatesTest(true)
            }}
          />
        </View>
...
